deploy_yaml/base/ingress.example.yaml
#修改下面的host
#复制该文件,命名为ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bkci-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules: 
  - host: devops.bk.example.com     #与bkenv.properties的BKCI_FQDN一致
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bkci-gateway
            port: 
              number: 80
  - host: consul.bk.tencent.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: consul-ui
            port: 
              number: 80
